--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,9 @@
 <h1>show</h1>
+<table>
+ <th>タイトル</th>
+ <th>本文</th>
+ <tr>
+  <td><%= @post.title %></td>
+  <td><%= @post.body %></td>
+ </tr>
+</table>
