--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,3 +7,11 @@
   <td><%= @post.body %></td>
  </tr>
 </table>
+
+<% if @post.likes.exists?(user: current_user) %>
+ <%= button_to 'いいね解除', post_like_path(@post), method: :delete %>
+<% else %>
+ <%= button_to 'いいね', post_like_path(@post), method: :post %>
+<% end %>
+
+<p>いいね数：<%= @post.likes.count %></p>
